--- a/DOSSOKAM2019.csproj
+++ b/DOSSOKAM2019.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -9,37 +8,33 @@
   <ItemGroup>
     <PackageReference Include="Bootstrap" Version="5.3.8" />
     <PackageReference Include="Dapper" Version="2.1.66" />
-    <PackageReference Include="EntityFramework" Version="6.5.1" />
+    <!-- EntityFramework KALDIRILDI (Eski) -->
+    <!-- <PackageReference Include="EntityFramework" Version="6.5.1" /> -->
     <PackageReference Include="EPPlus" Version="5.8.12" />
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
-    <PackageReference Include="Microsoft.AspNet.Razor" Version="3.3.0" />
-    <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
-    <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.3.0" />
+    
+    <!-- ESKİ ASP.NET PAKETLERİNİ KALDIR -->
+    <!-- <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" /> -->
+    <!-- <PackageReference Include="Microsoft.AspNet.Razor" Version="3.3.0" /> -->
+    <!-- <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" /> -->
+    <!-- <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.3.0" /> -->
+    
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.3.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+    
+    <!-- Entity Framework Core PAKETLERİ -->
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     
-    <!-- PostgreSQL PAKETLERİ - GÜNCELLENDİ -->
-    <PackageReference Include="Npgsql" Version="9.0.4" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-    
-    <!-- GEREKSİZ PAKET KALDIRILDI -->
-    <!-- <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" /> -->
+    <!-- PostgreSQL PAKETLERİ -->
+    <PackageReference Include="Npgsql" Version="8.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="logs\" />
-  </ItemGroup>
-
-  <PropertyGroup>
-    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-  </PropertyGroup>
 </Project>
